<resources>
    <string name="addfriend_title">Add a friend</string>
    <string name="addfriend_searc_hit">Phone Number/Email</string>
    <string name="deletefriend_title">Confirm to delete this friend?</string>
    <string name="calibration_stop5_1">After connecting the components by wires and calibrating the main unit, disconnect the power supply to the main unit by stopping the engine and pulling out the car key. </string>
    <string name="calibration_stop5_2">Fixing wires/cables: The cable tie is used to ensure that the cable may not be clamped or clogged by the moving parts on the vehicle. </string>
    <string name="calibration_stop5_3">Conceal the wires: Two methods are available to conceal the wires and cables. The cable may be concealed in the sealing rubber strip of the windshield, or may be stuck onto the windshield surface with the fixed fastener if permitted by the owner of the vehicle. \nOther cables may be concealed, subject to actual conditions. </string>
    <string name="calibration_stop5_4">Please note that cables must be kept away from high temperatures and sharp objects, and wiring shall not affect the normal driving and use of the vehicle. </string>
    <string name="calibration_stop6_1">The anti-glare screen is designed to prevent light in the vehicle from being reflected onto the camera. In case of light reflection, identification will be affected. </string>
    <string name="calibration_stop6_2">Following the figure below, stick the anti-glare screen onto the small flat under the lens of the main unit. The anti-glare screen should cover the screw holes. </string>
    <string name="calibration_stop6_3">After the anti-glare screen is installed, open the app. On the “Live-road” page, connect the main unit and your smart phone. If the main unit and the phone have successfully connected to each other, the indicator beside the “Connect” button will light up. Click the ‘Real-time mode’ button. After some time, the real view of the main unit will be displayed on your smart phone. </string>
    <string name="calibration_stop6_4">Confirm whether the screen shields the image. If so, the anti-glare screen may be cut a little as is appropriate; however, the anti-glare screen must make contact with the windshield to prevent potential reflection. </string>
    <string name="calibration_stop7_1">Now, we have finished the installation and calibration process. /nOpen the app. On the “Live-road” page, connect the main unit and your smart phone. If the main unit and the phone have successfully connected to each other, the indicator beside the “Connect” button will light up. /n
Click the “Real-time mode” button. After some time, the real view of the main unit will be displayed on your smart phone. \nSome of the lanes and vehicles in the images are added with dynamic marks. This ADAS system judges potential dangers almost in the same way as it draws these marks. If the majority of the vehicles in your car’s approaching direction are marked, your calibration is proven correct; otherwise, you need to calibrate the main unit again. \n
Please note that this system must be tested under proper light. It is not suitable for being tested in a dark environment, or under a comparatively dim or bright environment. </string>
    <string name="connect_search_services_fail">Search service failed. Please try again later. </string>
    <string name="connect_subscribe_fail">Characteristic subscription failure. Please try again later. </string>
    <string name="connect_write_describer_fail">Descriptor write failed. Please try again later. </string>
    <string name="connect_login_device_fail">Login failed. Please try again later. </string>
    <string name="connect_connect_ble_timeout">Connection to bluetooth timed out. Please try again later. </string>
    <string name="connect_search_services_timeout">Search service timed out. Please try again later. </string>
    <string name="connect_subscribe_timeout">Characteristic subscription timed out. Please try again later. </string>
    <string name="connect_write_describer_timeout">Descriptor write timed out. Please try again later. </string>
    <string name="connect_login_device_timeout">Login timed out. Please try again later. </string>
    <string name="connect_login_passwrod_error_title">Password error. Please enter again or choose other device. </string>
    <string name="connect_login_passwrod_error_cancel">Choose other device</string>
    <string name="connect_login_passwrod_error_input">Enter your password</string>
    <string name="system_set_s_outdraw">Video Stream Output</string>
    <string name="system_set_s_addadas">Add Recognition Marks</string>
    <string name="system_set_s_outadas">Data Output Yto Series Port</string>
    <string name="system_set_s_video_formats">Video Formats:</string>
    <string name="user_agreement_title">Installation License Agreement</string>
    <string name="user_agreement_content">"        This Agreement is a legal agreement made and entered into by and between you and Vispect with respect to the installation of this system. Please carefully read and understand all rights and limitations as set forth under the End User Installation License Agreement (“this Agreement”) with respect to this system. Prior to installation, please carefully read all articles under this Agreement and decide whether or not to accept the same. Unless or until you accept them, this system shall not be installed or applied to your car.
    \nThis system contains the attached product parts and software, as well as related printing materials.
    \nThis product is an assistance product for certain driving conditions and cannot be used as a substitute for the driver himself/herself. Even with this product in operation, you must continue to focus on driving, while paying close attention to the conditions on the road and neighboring vehicles.
    \nThis product is not suitable for driving at night, or in dark environment.
    \nWhen you use this system, the following may impact its performance ability or reduce its performance:
    \n1. Weather conditions, such as heavy rain, snow, and fog, are present.
    \n2. The camera is in a high or low temperature environment.
    \n3. Vehicle dump or road slope
    \n4. The vehicle is tilted or the road is on a slope.
    \n5. The camera suddenly moves from a dark environment into a bright one, or vice versa, such as in a garage and a tunnel.
    \n6. The camera is sheltered or is in front of a large barrier, such as a wall.
    \n7. Replace the camera with one of your own without authorization.
    \n8. The vehicle height changes due to an excessive load of articles or passengers.
    \n9. After this system is installed, the vehicle height is changed due to replacement of the shockproof system.
    \n10. A change in the camera height results from a sudden braking.
    \n11. The camera position and angle change due to a carwash or collision.
    \n12. Any other factors which may impact the camera performance, camera frame quality, camera sight, or main unit performance.
    \n\nAll above-mentioned factors may impact the system performance. Please beware that these are excluded as product quality or installation defects. "</string>
    <string name="explain">explain</string>
    <string name="video">video</string>
    <string name="operation">operation</string>
    <string name="select_field">Choose a site</string>
    <string name="select_field_tisp_1">将车停在平坦的地面上。车前最少留下4米的空间，用来放置标定板。</string>
    <string name="calibration_board">标定板</string>
    <string name="calibration_board_tips1">将标定板放置在离挡风玻璃3-3. 5米处。\n标定板需要固定，可以贴挂在墙上、或车库门上，也可以贴挂在梯子上。地面必须平坦。</string>
    <string name="calibration_board_tips2">利用墙或车库门放置标定板：</string>
    <string name="calibration_board_tips3">利用梯子放置标定板：</string>
    <string name="calibration_board_tips4">不要求标定板一定垂直：</string>
    <string name="select_power_supply">电源选择</string>
    <string name="select_power_supply_tips1">微牌ADAS系统有两种取电选择：从车辆OBD接口取电、或从车辆供电保险盒取电。除取电外，系统还可以连接车辆的ACC线，以便更准确地获取汽车起停信息。</string>
    <string name="select_power_supply_tips2">注意：\n从车辆保险盒取电，须只由持有相应电气资质、并经过微牌公司培训的专业人员进行操作。\n连接车辆ACC线，须只由持有相应电气资质、并经过微牌公司培训的专业人员进行操作。</string>
    <string name="select_power_supply_tips3">以下为不同型号产品的取电建议：</string>
    <string name="select_power_supply_tips4">注意：电动车、和具有发动机自动熄火的车辆，安装时候必须连接ACC线，否则可能造成本系统开机/关机不及时。</string>
    <string name="connect_power_supply">V款/ F款 连接电源</string>
    <string name="connect_power_supply_tips1">特别注意：为系统接电之前，请关闭汽车电源，并拔掉车钥匙</string>
    <string name="connect_power_supply_tips2">部件和线材</string>
    <string name="connect_power_supply_tips3">如上图：主机带有1个5针插头，用来连接提示器的任意一个5针插头；</string>
    <string name="connect_power_supply_tips4">如上图：提示器带有2个5针插头（连接主机、和OBD盒；任意选择，不区分）和1个卡口接头（连接震动椅垫）；</string>
    <string name="connect_power_supply_tips5">如上图：OBD盒子有2个5针插头（1个连接提示器、1个备用；任意选择，不区分）和1个4针插头（连接ACC）；</string>
    <string name="connect_power_supply_tips6"> 如上图：接线盒（缺图）</string>
    <string name="cancel">Cancel</string>
    <string name="forget_password">Forget Password?</string>
    <string name="obd_test_tips">When you do a operation as below on your car, the icon should change its color. If its color remains the same, you have chosen a wrong make or a wrong model. </string>
    <string name="obd_test_light_left">Left Turn Light</string>
    <string name="obd_test_light_right">Right Turn Light</string>
    <string name="calibration4_step9_context2">• Adapt the camera angle</string>
    <string name="calibration4_step9_context3">Tap the button below to adapt the camera angle.\nAfter the button is pressed, the camera will automatically adapt itself when you first time drive fast on road. The adapting usually lasts for three to five minutes. Please try your best to drive in the middle of your own lane during the adapting process. You can see the adapting progress under the ‘live’ mode.\nIn the future, if you have moved the camera, please redo the \"fix-calibrate\" and tap the button below again to redo the adapting.</string>
    <string name="calibration4_step9_context4">Adapt angle</string>
    <string name="calibration4_step9_context5">• Adapt vehicle speed:</string>
    <string name="calibration4_step9_context6">Note: If you did not choose to connect your system with the speed wire of the car, please skip this step. </string>
    <string name="calibration4_step9_context7">Tap the button below to adapt to the car speed wire. In the future, if you have re-connected the speed wire, please tap the button again to redo the adapting. After the button is pressed, the system will automatically adapt to the speed wire when you first time drive fast on road. </string>
    <string name="calibration4_step9_context8">Adjust vehicle speed</string>
    <string name="OBDAutoCrack_context1">After starting, follow the progress bar and the arrow to turn on/off the turn lights</string>
    <string name="OBDAutoCrack_context2">Start cracking</string>
    <string name="local_video">Local video file</string>
    <string name="adjustments_save">Save</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Sign In</string>
    <string name="register"><u>Register</u></string>
    <string name="register_the_email">Register the email</string>
    <string name="login_by_email">Login by email</string>
    <string name="register_"><u>Register</u></string>
    <string name="recommend_login">Recommend login method</string>
    <string name="use_existend_account"><u>Use Existend Account?Sign In</u></string>
    <string name="dialog_alarm_video">Alarm Video</string>
    <string name="dialog_driving_video">Driving Video</string>
    <string name="change_avatar">Change Your Avatar</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_photos">Choose from Photos</string>
</resources>