<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/y50"
            android:text="@string/register_the_email"
            android:textColor="@color/white"
            android:textSize="@dimen/y80"
            />

        <EditText
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x50"
            android:layout_marginRight="@dimen/x50"
            android:hint="@string/login_email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/MyEditText" />

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x50"
            android:layout_marginRight="@dimen/x50"
            android:layout_marginTop="@dimen/y80"
            android:hint="@string/login_password"
            android:password="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/MyEditText" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y130"
            android:layout_marginLeft="@dimen/x50"
            android:layout_marginRight="@dimen/x50"
            android:layout_marginTop="@dimen/y50"
            android:background="@drawable/btn_login"
            android:text="@string/register"
            android:textColor="@color/background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y120"
            android:text="@string/recommend_login"
            android:textColor="@color/white"
            android:visibility="invisible"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_tologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/y80"
        android:text="@string/use_existend_account"
        android:textColor="@color/white" />

</RelativeLayout>