<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/change_avatar"
        android:textColor="@color/black"
        android:textSize="@dimen/y50" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint_bg" />

    <TextView
        android:id="@+id/tv_take_photo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ripple_bg2"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textSize="@dimen/y45"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint_bg" />

    <TextView
        android:id="@+id/tv_choose_photos"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ripple_bg2"
        android:gravity="center"
        android:text="@string/choose_from_photos"
        android:textSize="@dimen/y45"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/hint_bg" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ripple_bg2"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/blackText"
        android:textSize="@dimen/y50" />

</LinearLayout>