<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alarm_video"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ripple_bg2"
        android:gravity="center"
        android:text="@string/dialog_alarm_video"
        android:textSize="@dimen/y45" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint_bg" />

    <TextView
        android:id="@+id/driving_video"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ripple_bg2"
        android:gravity="center"
        android:text="@string/dialog_driving_video"
        android:textSize="@dimen/y45" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint_bg" />

    <TextView
        android:id="@+id/local_video"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ripple_bg2"
        android:gravity="center"
        android:text="@string/local_video"
        android:textSize="@dimen/y45" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/hint_bg" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ripple_bg2"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/y50" />

</LinearLayout>