<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <include layout="@layout/include_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_crack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_obd_auto_crack_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x50"
                android:minHeight="@dimen/x400"
                android:text="@string/OBDAutoCrack_context1"
                android:textColor="@color/text_color_default"
                android:textSize="@dimen/x48" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.vispect.android.vispect_g2_app.ui.widget.XuImageBtn
                    android:id="@+id/iv_center_btn"
                    android:layout_width="@dimen/x400"
                    android:layout_height="@dimen/x400"
                    android:layout_centerInParent="true"
                    android:background="@mipmap/autoobd_btn"
                    android:padding="@dimen/x5" />

                <TextView
                    android:id="@+id/tv_btn_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/OBDAutoCrack_context2"
                    android:textColor="@color/text_color_default"
                    android:textSize="@dimen/x48" />

                <ImageView
                    android:id="@+id/img_center_left"
                    android:layout_width="@dimen/x200"
                    android:layout_height="@dimen/y200"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ico_left_turn_light_on"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/img_center_right"
                    android:layout_width="@dimen/x200"
                    android:layout_height="@dimen/y200"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ico_right_turn_light_on"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/off"
                    android:paddingRight="@dimen/x500"
                    android:textColor="@color/text_color_default"
                    android:textSize="@dimen/x48"
                    android:visibility="invisible" />


                <TextView
                    android:paddingLeft="@dimen/x500"
                    android:layout_centerInParent="true"
                    android:id="@+id/tv_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"
                    android:textColor="@color/color_title_bar"
                    android:textSize="@dimen/x48"
                    android:visibility="invisible" />


            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_obd_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/y30"
                android:gravity="center"
                android:text="@string/obd_test_tips"
                android:textColor="@color/color_title_bar"
                android:textSize="@dimen/x40" />

            <!--左右转向灯-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y50"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_left_turn_light"
                        android:layout_width="@dimen/x200"
                        android:layout_height="@dimen/y200"
                        android:src="@mipmap/ico_left_turn_light_off" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/obd_test_light_left"
                        android:textColor="@color/text_color_default"
                        android:textSize="@dimen/x48" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x200"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_right_turn_light"
                        android:layout_width="@dimen/x200"
                        android:layout_height="@dimen/y200"
                        android:src="@mipmap/ico_right_turn_light_off" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/obd_test_light_right"
                        android:textColor="@color/text_color_default"
                        android:textSize="@dimen/x48" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_sumit"
                android:layout_width="@dimen/x1000"
                android:layout_height="@dimen/y150"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/y50"
                android:background="@mipmap/btn_login"
                android:text="@string/adjustments_save"
                android:textColor="@color/white"
                android:textSize="@dimen/x50" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>